[gd_scene load_steps=8 format=2]

[ext_resource path="res://shaders/blur.shader" type="Shader" id=1]
[ext_resource path="res://scenes/components/MenuAsEsc.gd" type="Script" id=2]
[ext_resource path="res://fonts/harmony-os-sans-sc/HarmonyOS_Sans_SC_Black.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://fonts/harmony-os-sans-sc/DefaultBoldFont.tres" type="DynamicFont" id=6]
[ext_resource path="res://images/white.png" type="Texture" id=10]

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 1 )
shader_param/amount = 2.5

[sub_resource type="DynamicFont" id=2]
size = 176
outline_size = 4
extra_spacing_char = -10
font_data = ExtResource( 4 )

[node name="MenuAfterEsc" type="Node2D"]
script = ExtResource( 2 )

[node name="Tween Click" type="Tween" parent="."]

[node name="Tween" type="Tween" parent="."]

[node name="BlurBG" type="TextureRect" parent="."]
material = SubResource( 3 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 2
size_flags_vertical = 2
texture = ExtResource( 10 )
expand = true

[node name="Title" type="Label" parent="."]
margin_left = 120.0
margin_top = 98.0
margin_right = 1800.0
margin_bottom = 305.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "TR:MENU:TITLE"
uppercase = true

[node name="Back" type="Control" parent="."]
margin_left = 120.0
margin_top = 440.0
margin_right = 479.0
margin_bottom = 493.0
mouse_filter = 1
mouse_default_cursor_shape = 2

[node name="White BG Left" type="ColorRect" parent="Back"]
margin_bottom = 53.0
mouse_default_cursor_shape = 2

[node name="White BG Right" type="ColorRect" parent="Back"]
margin_left = 344.0
margin_right = 344.0
margin_bottom = 53.0

[node name="Transparent BG" type="ColorRect" parent="Back"]
margin_right = 360.0
margin_bottom = 53.0
mouse_default_cursor_shape = 2
color = Color( 0, 0, 0, 0.0784314 )

[node name="Title" type="Label" parent="Back"]
margin_top = 4.0
margin_right = 360.0
margin_bottom = 52.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 6 )
text = "TR:MENU:BACK"

[node name="History" type="Control" parent="."]
margin_left = 120.0
margin_top = 543.0
margin_right = 479.0
margin_bottom = 596.0
mouse_filter = 1
mouse_default_cursor_shape = 2

[node name="White BG Left" type="ColorRect" parent="History"]
margin_bottom = 53.0
mouse_default_cursor_shape = 2

[node name="White BG Right" type="ColorRect" parent="History"]
margin_left = 344.0
margin_right = 344.0
margin_bottom = 53.0

[node name="Transparent BG" type="ColorRect" parent="History"]
margin_right = 360.0
margin_bottom = 53.0
mouse_default_cursor_shape = 2
color = Color( 0, 0, 0, 0.0784314 )

[node name="Title" type="Label" parent="History"]
margin_top = 4.0
margin_right = 360.0
margin_bottom = 52.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 6 )
text = "TR:MENU:HISTORY"

[node name="Option" type="Control" parent="."]
margin_left = 120.0
margin_top = 644.0
margin_right = 479.0
margin_bottom = 697.0
mouse_filter = 1
mouse_default_cursor_shape = 2

[node name="White BG Left" type="ColorRect" parent="Option"]
margin_bottom = 53.0
mouse_default_cursor_shape = 2

[node name="White BG Right" type="ColorRect" parent="Option"]
margin_left = 344.0
margin_right = 344.0
margin_bottom = 53.0

[node name="Transparent BG" type="ColorRect" parent="Option"]
margin_right = 360.0
margin_bottom = 53.0
mouse_default_cursor_shape = 2
color = Color( 0, 0, 0, 0.0784314 )

[node name="Title" type="Label" parent="Option"]
margin_top = 4.0
margin_right = 360.0
margin_bottom = 52.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 6 )
text = "TR:MENU:OPTION"

[node name="Home" type="Control" parent="."]
margin_left = 120.0
margin_top = 745.0
margin_right = 479.0
margin_bottom = 798.0
mouse_filter = 1
mouse_default_cursor_shape = 2

[node name="White BG Left" type="ColorRect" parent="Home"]
margin_bottom = 53.0
mouse_default_cursor_shape = 2

[node name="White BG Right" type="ColorRect" parent="Home"]
margin_left = 344.0
margin_right = 344.0
margin_bottom = 53.0

[node name="Transparent BG" type="ColorRect" parent="Home"]
margin_right = 360.0
margin_bottom = 53.0
mouse_default_cursor_shape = 2
color = Color( 0, 0, 0, 0.0784314 )

[node name="Title" type="Label" parent="Home"]
margin_top = 4.0
margin_right = 360.0
margin_bottom = 52.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 6 )
text = "TR:MENU:HOME"

[node name="Exit" type="Control" parent="."]
margin_left = 120.0
margin_top = 846.0
margin_right = 479.0
margin_bottom = 899.0
mouse_filter = 1
mouse_default_cursor_shape = 2

[node name="White BG Left" type="ColorRect" parent="Exit"]
margin_bottom = 53.0
mouse_default_cursor_shape = 2

[node name="White BG Right" type="ColorRect" parent="Exit"]
margin_left = 344.0
margin_right = 344.0
margin_bottom = 53.0

[node name="Transparent BG" type="ColorRect" parent="Exit"]
margin_right = 360.0
margin_bottom = 53.0
mouse_default_cursor_shape = 2
color = Color( 0, 0, 0, 0.0784314 )

[node name="Title" type="Label" parent="Exit"]
margin_top = 4.0
margin_right = 360.0
margin_bottom = 52.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 6 )
text = "TR:MENU:EXIT"

[connection signal="draw" from="." to="." method="_on_MenuAfterEsc_draw"]
[connection signal="tween_all_completed" from="Tween Click" to="." method="_on_Tween_Click_tween_all_completed"]
[connection signal="gui_input" from="Back/Transparent BG" to="." method="_on_Buttons_gui_input" binds= [ "Back" ]]
[connection signal="mouse_entered" from="Back/Transparent BG" to="." method="_on_Buttons_mouse_entered" flags=3 binds= [ "Back" ]]
[connection signal="mouse_exited" from="Back/Transparent BG" to="." method="_on_Buttons_mouse_exited" binds= [ "Back" ]]
[connection signal="gui_input" from="History/Transparent BG" to="." method="_on_Buttons_gui_input" binds= [ "History" ]]
[connection signal="mouse_entered" from="History/Transparent BG" to="." method="_on_Buttons_mouse_entered" binds= [ "History" ]]
[connection signal="mouse_exited" from="History/Transparent BG" to="." method="_on_Buttons_mouse_exited" binds= [ "Option" ]]
[connection signal="gui_input" from="Option/Transparent BG" to="." method="_on_Buttons_gui_input" binds= [ "Option" ]]
[connection signal="mouse_entered" from="Option/Transparent BG" to="." method="_on_Buttons_mouse_entered" binds= [ "Option" ]]
[connection signal="mouse_exited" from="Option/Transparent BG" to="." method="_on_Buttons_mouse_exited" binds= [ "Option" ]]
[connection signal="gui_input" from="Home/Transparent BG" to="." method="_on_Buttons_gui_input" binds= [ "Home" ]]
[connection signal="mouse_entered" from="Home/Transparent BG" to="." method="_on_Buttons_mouse_entered" binds= [ "Home" ]]
[connection signal="mouse_exited" from="Home/Transparent BG" to="." method="_on_Buttons_mouse_exited" binds= [ "Home" ]]
[connection signal="gui_input" from="Exit/Transparent BG" to="." method="_on_Buttons_gui_input" binds= [ "Exit" ]]
[connection signal="mouse_entered" from="Exit/Transparent BG" to="." method="_on_Buttons_mouse_entered" binds= [ "Exit" ]]
[connection signal="mouse_exited" from="Exit/Transparent BG" to="." method="_on_Buttons_mouse_exited" binds= [ "Exit" ]]
